secao projetos quase finalizada

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
             </div>
         </section>
 
-        <article class="cta container">
+        <article id="formulario" class="cta container">
             <h2>Bora, juntos, profissionalizar seu negócio?</h2>
             <p>Escreva pra gente um email contando sobre seu negócio. Conte com detalhes quais são suas necessidades, objetivos com o site, e tudo mais. Desta forma a gente consegue elaborar um orçamento perfeito para você!</p>
             <a class="cta-email" href="mailto:ola@agenciasolary.com.br">ola@agenciasolary.com.br</a>
