--- a/projetos/bortoluzzi.html
+++ b/projetos/bortoluzzi.html
@@ -49,11 +49,11 @@
   <main id="projeto-base">
     <article class="proj-capa container">
       <div class="proj-tit">
-        <h2>Metodologia. Inovação. Agilidade. Competência.</h2>
+        <h2>Advocacia séria, profissional e sobretudo, humanizada.</h2>
         <div class="proj-capa-infos">
           <div class="proj-info">
             <span>Cliente</span>
-            <p>Agência Solary</p>
+            <p>Bortoluzzi Advocacia</p>
           </div>
           <div class="proj-info">
             <span>Ano</span>
@@ -61,7 +61,7 @@
           </div>
           <div class="proj-info">
             <span>O que fizemos</span>
-            <p>Website & Identidade Visual</p>
+            <p>Website</p>
           </div>
         </div>
       </div>
@@ -85,8 +85,8 @@
 
     <div class="bg-proj-mockup">
       <article class="proj-mockup container">
-        <img src="./../assets/img/bortoluzzi.webp" alt="Mockup de celulares">
-        <img src="./../assets/img/bortoluzzi.webp" alt="Mockup de celulares">
+        <img src="./../assets/img/projetos/mockup-bortoluzzi4.png" alt="Mockup de celulares">
+        <img src="./../assets/img/projetos/mockup-bortoluzzi2.png" alt="Mockup de celulares">
       </article>
     </div>
 
