--- a/projetos/flavio-maciel.html
+++ b/projetos/flavio-maciel.html
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;700&family=Poppins:wght@300;700&family=Saira:wght@300;500;700&display=swap" rel="stylesheet">
-  <title>Agência Solary</title>
+  <title>Flavio Maciel</title>
 </head>
 
 <body>
@@ -49,11 +49,11 @@
   <main id="projeto-base">
     <article class="proj-capa container">
       <div class="proj-tit">
-        <h2>Metodologia. Inovação. Agilidade. Competência.</h2>
+        <h2>Advocacia Criminal responsável.</h2>
         <div class="proj-capa-infos">
           <div class="proj-info">
             <span>Cliente</span>
-            <p>Agência Solary</p>
+            <p>Flavio Maciel</p>
           </div>
           <div class="proj-info">
             <span>Ano</span>
@@ -61,11 +61,11 @@
           </div>
           <div class="proj-info">
             <span>O que fizemos</span>
-            <p>Website & Identidade Visual</p>
+            <p>Website & Landing Page</p>
           </div>
         </div>
       </div>
-      <div class="proj-capa-img"><img src="./../assets/img/projetos/mockup-bortoluzzi1.svg" alt="Mockup do site"></div>
+      <div class="proj-capa-img"><img src="./../assets/img/projetos/mockup-flavio.png" alt="Mockup do site"></div>
     </article>
 
     <div class="bg-proj-about">
@@ -73,11 +73,11 @@
         <div class="proj-about-tit">
           <h2>Sobre o Projeto</h2>
           <div class="proj-about-desc">
-            <h3>Segurança, confiança e conforto para um momento complicado da vida.</h3>
-            <p>O escritório de Bortoluzzi Advocacia é uma empresa que é focada na advocacia familiar, Gabriela mora em Caxias do Sul - RS, entretanto atende clientes do país todo, nas conversas iniciais ficou claro que ela desejava um site leve, sem atributos agressivos ao usuário, como por exemplo um botão flutuante ou aquelas - chatas - caixas de pop-up que atrapalham a navegação. Pensando nisso, criamos um site com longos “respiros” em um tom de branco para que a experiência do usuário seja mais agradável e intuitiva.
-              <br><br> Gabriela além de ser apaixonada por advogar também ama escrever, então percebemos a necessidade de um blog, onde fosse possível ela estar sempre atualizando e informando seus clientes. O layout do blog foi inspirado no famoso site de textos, Medium, referência em boa experiência ao usuário quando o assunto é leitura em telas.
+            <h3>O Dr. Flavio atua de forma estratégica para seus clientes.</h3>
+            <p>Nas conversas iniciais com Flavio já notamos que o seu principal objetivo era que seu cliente facilmente entrasse em contato com ele, o desenho do site foi feito com base nisso.
+              <br><br> Em diversos momentos do site há pontos chamativos para que facilmente os clientes o chamassem no Whatsapp, há inclusive um botão pulsante com o símbolo do Whatsapp.
             </p>
-            <a class="proj-about-link" href="https://bortoluzziadvocacia.com.br">veja o site completo aqui</a>
+            <a class="proj-about-link" href="https://flaviomaciel.com.br">veja o site completo aqui</a>
           </div>
         </div>
       </article>
@@ -85,24 +85,24 @@
 
     <div class="bg-proj-mockup">
       <article class="proj-mockup container">
-        <img src="./../assets/img/bortoluzzi.webp" alt="Mockup de celulares">
-        <img src="./../assets/img/bortoluzzi.webp" alt="Mockup de celulares">
+        <img src="./../assets/img/projetos/mockup-flavio1.png" alt="Mockup de celulares">
+        <img src="./../assets/img/projetos/mockup-flavio2.png" alt="Mockup de celulares">
       </article>
     </div>
 
     <article class="proj-quote container">
-      <h1>Para o <span>sucesso</span> de sua estratégia digital é necessário ter um site que represente sua marca.</h1>
+      <h1>Uma saida <span>fácil</span> para os clientes entederem quem ele é.</h1>
     </article>
 
     <article class="proj-mockup2 container">
-      <img src="./../assets/img/projetos/mockup-bortoluzzi3.png" alt="Mockup de celulares">
+      <img src="./../assets/img/projetos/mockup-flavio3.png" alt="Mockup de celulares">
     </article>
 
     <article class="proj-next container">
-      <a class="proj-next-link" href="./bortoluzzi.html"><span>
+      <a class="proj-next-link" href="./fluicoffee.html"><span>
           próximo
         </span>
-        <span class="proj-next-nome">Flavio Maciel</span>
+        <span class="proj-next-nome">fluicoffee</span>
       </a>
     </article>
   </main>
