--- a/projetos/fluicoffee.html
+++ b/projetos/fluicoffee.html
@@ -17,17 +17,17 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;700&family=Poppins:wght@300;700&family=Saira:wght@300;500;700&display=swap" rel="stylesheet">
-  <title>Agência Solary</title>
+  <title>Fluicoffee</title>
 </head>
 
 <body>
   <header class="container">
     <div class="header-bloco">
       <div class="header-left">
-        <a href="#metodologia">
+        <a href="./../index.html#metodologia">
           <p class="header-1"> metodologia</p>
         </a>
-        <a href="#diferenciais">
+        <a href="./../index.html#diferenciais">
           <p class="header-2">diferenciais</p>
         </a>
       </div>
@@ -36,10 +36,10 @@
           <img src="./../assets/img/icon/log.svg" alt="Ícone Solary"></a>
       </div>
       <div class="header-right">
-        <a href="#formulario">
+        <a href="./../index.html#formulario">
           <p class="header-3">formulario</p>
         </a>
-        <a href="#contato">
+        <a href="./../index.html#contato">
           <p class="header-4">contato</p>
         </a>
       </div>
@@ -49,11 +49,11 @@
   <main id="projeto-base">
     <article class="proj-capa container">
       <div class="proj-tit">
-        <h2>Metodologia. Inovação. Agilidade. Competência.</h2>
+        <h2>Pioneiros no método de Leito Fluidizado</h2>
         <div class="proj-capa-infos">
           <div class="proj-info">
             <span>Cliente</span>
-            <p>Agência Solary</p>
+            <p>Fluicoffee</p>
           </div>
           <div class="proj-info">
             <span>Ano</span>
@@ -61,11 +61,11 @@
           </div>
           <div class="proj-info">
             <span>O que fizemos</span>
-            <p>Website & Identidade Visual</p>
+            <p>Website</p>
           </div>
         </div>
       </div>
-      <div class="proj-capa-img"><img src="./../assets/img/projetos/mockup-bortoluzzi1.svg" alt="Mockup do site"></div>
+      <div class="proj-capa-img"><img src="./../assets/img/projetos/mockup-fluicoffee.png" alt="Mockup do site"></div>
     </article>
 
     <div class="bg-proj-about">
@@ -73,11 +73,11 @@
         <div class="proj-about-tit">
           <h2>Sobre o Projeto</h2>
           <div class="proj-about-desc">
-            <h3>Segurança, confiança e conforto para um momento complicado da vida.</h3>
-            <p>O escritório de Bortoluzzi Advocacia é uma empresa que é focada na advocacia familiar, Gabriela mora em Caxias do Sul - RS, entretanto atende clientes do país todo, nas conversas iniciais ficou claro que ela desejava um site leve, sem atributos agressivos ao usuário, como por exemplo um botão flutuante ou aquelas - chatas - caixas de pop-up que atrapalham a navegação. Pensando nisso, criamos um site com longos “respiros” em um tom de branco para que a experiência do usuário seja mais agradável e intuitiva.
-              <br><br> Gabriela além de ser apaixonada por advogar também ama escrever, então percebemos a necessidade de um blog, onde fosse possível ela estar sempre atualizando e informando seus clientes. O layout do blog foi inspirado no famoso site de textos, Medium, referência em boa experiência ao usuário quando o assunto é leitura em telas.
+            <h3>A máquina que veio de um sonho.</h3>
+            <p>A Fluicoffee está há mais de uma década no mercado de cafés, sempre com tecnologia de ponta e inovando nos seus métodos, eles são detentores da patente de leito fluidizado, foram a primeira empresa a desenvolver uma máquina de grande porte que faz a torra de cafés neste modelo.
+              <br><br> Também oferecem sua expertice sobre cafés especiais - título do mais alto nível que o grão pode ter - como produto, realizam mentorias com pequenos e médios produtores que desejam ingressar com segurança no mundo de cafés especiais.
             </p>
-            <a class="proj-about-link" href="https://bortoluzziadvocacia.com.br">veja o site completo aqui</a>
+            <a class="proj-about-link" href="https://fluicoffee.com">veja o site completo aqui</a>
           </div>
         </div>
       </article>
@@ -85,8 +85,8 @@
 
     <div class="bg-proj-mockup">
       <article class="proj-mockup container">
-        <img src="./../assets/img/bortoluzzi.webp" alt="Mockup de celulares">
-        <img src="./../assets/img/bortoluzzi.webp" alt="Mockup de celulares">
+        <img src="./../assets/img/projetos/mockup-fluicoffee3.png" alt="Mockup de celulares">
+        <img src="./../assets/img/projetos/mockup-fluicoffee2.png" alt="Mockup de celulares">
       </article>
     </div>
 
@@ -95,14 +95,14 @@
     </article>
 
     <article class="proj-mockup2 container">
-      <img src="./../assets/img/projetos/mockup-bortoluzzi3.png" alt="Mockup de celulares">
+      <img src="./../assets/img/projetos/mockup-fluicoffee1.png" alt="Mockup de celulares">
     </article>
 
     <article class="proj-next container">
-      <a class="proj-next-link" href="./bortoluzzi.html"><span>
+      <a class="proj-next-link" href="./dressler.html"><span>
           próximo
         </span>
-        <span class="proj-next-nome">Flavio Maciel</span>
+        <span class="proj-next-nome">Dressler</span>
       </a>
     </article>
   </main>
