--- a/projetos/pain.html
+++ b/projetos/pain.html
@@ -65,7 +65,7 @@
           </div>
         </div>
       </div>
-      <div class="proj-capa-img"><img src="./../assets/img/projetos/mockup-bortoluzzi1.svg" alt="Mockup do site"></div>
+      <div class="proj-capa-img"><img src="./../assets/img/projetos/mockup-pain.svg" alt="Mockup do site"></div>
     </article>
 
     <div class="bg-proj-about">
@@ -87,8 +87,8 @@
 
     <div class="bg-proj-mockup">
       <article class="proj-mockup container">
-        <img src="./../assets/img/bortoluzzi.webp" alt="Mockup de celulares">
-        <img src="./../assets/img/bortoluzzi.webp" alt="Mockup de celulares">
+        <img src="./../assets/img/projetos/mockup-pain3.png" alt="Mockup de celulares">
+        <img src="./../assets/img/projetos/mockup-pain2.png" alt="Mockup de celulares">
       </article>
     </div>
 
@@ -97,7 +97,7 @@
     </article>
 
     <article class="proj-mockup2 container">
-      <img src="./../assets/img/projetos/mockup-bortoluzzi3.png" alt="Mockup de celulares">
+      <img src="./../assets/img/paiN.webp" alt="Mockup de celulares">
     </article>
 
     <article class="proj-next container">
