--- a/projetos/roccia.html
+++ b/projetos/roccia.html
@@ -49,11 +49,11 @@
   <main id="projeto-base">
     <article class="proj-capa container">
       <div class="proj-tit">
-        <h2>Metodologia. Inovação. Agilidade. Competência.</h2>
+        <h2>Grãos verdadeiramente especiais.</h2>
         <div class="proj-capa-infos">
           <div class="proj-info">
             <span>Cliente</span>
-            <p>Agência Solary</p>
+            <p>Roccia</p>
           </div>
           <div class="proj-info">
             <span>Ano</span>
@@ -61,7 +61,7 @@
           </div>
           <div class="proj-info">
             <span>O que fizemos</span>
-            <p>Website & Identidade Visual</p>
+            <p>Identidade Visual, Marca & Website</p>
           </div>
         </div>
       </div>
@@ -73,8 +73,8 @@
         <div class="proj-about-tit">
           <h2>Sobre o Projeto</h2>
           <div class="proj-about-desc">
-            <h3>Segurança, confiança e conforto para um momento complicado da vida.</h3>
-            <p>O escritório de Bortoluzzi Advocacia é uma empresa que é focada na advocacia familiar, Gabriela mora em Caxias do Sul - RS, entretanto atende clientes do país todo, nas conversas iniciais ficou claro que ela desejava um site leve, sem atributos agressivos ao usuário, como por exemplo um botão flutuante ou aquelas - chatas - caixas de pop-up que atrapalham a navegação. Pensando nisso, criamos um site com longos “respiros” em um tom de branco para que a experiência do usuário seja mais agradável e intuitiva.
+            <h3>Amor familiar pela natureza e por cafés.</h3>
+            <p>A família Tegon inicialmente nos procurou para desenvolvermos uma Identidade Visual para sua empresa de cafés especiais, porém ao longo do processo percebemos que seria necessário também desenvolver um naming e estabelecer bases mais sólidas para a marca. Fizemos a criação de uma persona para delimitar melhor qual o público que desejavam atingir, bem como o estabelecimento do arquétipo que mais se encaixava com a marca.
               <br><br> Gabriela além de ser apaixonada por advogar também ama escrever, então percebemos a necessidade de um blog, onde fosse possível ela estar sempre atualizando e informando seus clientes. O layout do blog foi inspirado no famoso site de textos, Medium, referência em boa experiência ao usuário quando o assunto é leitura em telas.
             </p>
             <a class="proj-about-link" href="https://bortoluzziadvocacia.com.br">veja o site completo aqui</a>
@@ -91,7 +91,7 @@
     </div>
 
     <article class="proj-quote container">
-      <h1>Para o <span>sucesso</span> de sua estratégia digital é necessário ter um site que represente sua marca.</h1>
+      <h1>Criação de Marca, Naming & Identidade Visual para representar a <span>Roccia</span> cafés especiais.</h1>
     </article>
 
     <article class="proj-mockup2 container">
@@ -102,7 +102,7 @@
       <a class="proj-next-link" href="./bortoluzzi.html"><span>
           próximo
         </span>
-        <span class="proj-next-nome">Flavio Maciel</span>
+        <span class="proj-next-nome">pain 2015</span>
       </a>
     </article>
   </main>
