finalizacao secao projetos

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 
                     <div class="port-item3">
                         <a href="./projetos/flavio-maciel.html">
-                            <img src="./assets/img/flavioadv.webp" alt="Projeto Bortoluzzi Advocacia">
+                            <img src="./assets/img/flavioadv.webp" alt="Projeto Flavio Maciel">
                             <div class="port-txt">
                                 <h6>Escritório Flavio Maciel</h6>
                                 <p>Website & Landing Page</p>
@@ -424,10 +424,19 @@
                     </div>
                     <div class="port-item4">
                         <a href="./projetos/fluicoffee.html">
-                            <img src="./assets/img/flui.webp" alt="Projeto Bortoluzzi Advocacia">
+                            <img src="./assets/img/projetos/mockup-fluicoffee1.webp" alt="Projeto Fluicoffee">
                             <div class="port-txt">
                                 <h6>Fluicoffee</h6>
-                                <p>Website & Identida Visual</p>
+                                <p>Website</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="port-item5">
+                        <a href="./projetos/dressler.html">
+                            <img src="./assets/img/projetos/mockup-dressler3.webp" alt="Projeto Dressler">
+                            <div class="port-txt">
+                                <h6>Dressler</h6>
+                                <p>Landing Page</p>
                             </div>
                         </a>
                     </div>
