--- a/projetos/bortoluzzi.html
+++ b/projetos/bortoluzzi.html
@@ -61,7 +61,7 @@
           </div>
           <div class="proj-info">
             <span>O que fizemos</span>
-            <p>Website</p>
+            <p>Website & Blog</p>
           </div>
         </div>
       </div>
@@ -85,8 +85,8 @@
 
     <div class="bg-proj-mockup">
       <article class="proj-mockup container">
-        <img src="./../assets/img/projetos/mockup-bortoluzzi4.png" alt="Mockup de celulares">
-        <img src="./../assets/img/projetos/mockup-bortoluzzi2.png" alt="Mockup de celulares">
+        <img src="./../assets/img/projetos/mockup-bortoluzzi4.webp" alt="Mockup de celulares">
+        <img src="./../assets/img/projetos/mockup-bortoluzzi2.webp" alt="Mockup de celulares">
       </article>
     </div>
 
@@ -95,7 +95,7 @@
     </article>
 
     <article class="proj-mockup2 container">
-      <img src="./../assets/img/projetos/mockup-bortoluzzi3.png" alt="Mockup de celulares">
+      <img src="./../assets/img/projetos/mockup-bortoluzzi3.webp" alt="Mockup Completo">
     </article>
 
     <article class="proj-next container">
