--- a/projetos/fluicoffee.html
+++ b/projetos/fluicoffee.html
@@ -95,7 +95,7 @@
     </article>
 
     <article class="proj-mockup2 container">
-      <img src="./../assets/img/projetos/mockup-fluicoffee1.png" alt="Mockup de celulares">
+      <img src="./../assets/img/projetos/mockup-fluicoffee1.webp" alt="Mockup Completo">
     </article>
 
     <article class="proj-next container">
