--- a/projetos/dressler.html
+++ b/projetos/dressler.html
@@ -96,7 +96,7 @@
     </article>
 
     <article class="proj-mockup2 container">
-      <img src="./../assets/img/projetos/mockup-dressler3.png" alt="Mockup de celulares">
+      <img src="./../assets/img/projetos/mockup-dressler3.webp" alt="Mockup Completo">
     </article>
 
     <article class="proj-next container">
