--- a/projetos/pain.html
+++ b/projetos/pain.html
@@ -49,7 +49,7 @@
   <main id="projeto-base">
     <article class="proj-capa container">
       <div class="proj-tit">
-        <h2>Muito do que títulos. O nome na História.</h2>
+        <h2>Muito mais do que títulos. O nome na História.</h2>
         <div class="proj-capa-infos">
           <div class="proj-info">
             <span>Cliente</span>
