--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     </header>
 
     <main>
+        <!-- HERO -->
         <div class="relative">
             <div class="bg__hero">
                 <svg class="svg-hero" viewBox="0 0 1920 662" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -126,6 +127,8 @@
                     </defs>
                 </svg>
             </div>
+
+            <!-- HERO -->
             <section class="hero container">
                 <div class="hero__grid p-7">
                     <div class="hero__txt">
@@ -147,6 +150,7 @@
             </section>
         </div>
 
+        <!-- METODOLOGIA -->
         <article id="metodologia" class="meto">
             <div class="meto__bg">
                 <div class="container">
@@ -191,6 +195,7 @@
             </div>
         </article>
 
+        <!-- DIFERENCIAIS -->
         <section id="diferenciais" class="diferenciais container">
             <h4>Diferenciais</h4>
             <div id="diferenciais__responsivo" class="diferenciais__item">
@@ -377,32 +382,34 @@
             </div>
         </section>
 
+        <!-- NÚMEROS -->
         <article id="numeros" class="num">
             <div class="num__grid container">
                 <div class="num__item">
                     <img src="./assets/img/icon/num1.svg" alt="">
                     <div class="num__txt">
-                        <p class="num__dest">+30</p>
+                        <p class="num__dest">+60</p>
                         <p class="num__p">clientes satisfeitos</p>
                     </div>
                 </div>
                 <div class="num__item">
                     <img src="./assets/img/icon/num2.svg" alt="">
                     <div class="num__txt">
-                        <p class="num__dest">+295</p>
+                        <p class="num__dest">+425</p>
                         <p class="num__p">mil linhas de código programado</p>
                     </div>
                 </div>
                 <div class="num__item">
                     <img src="./assets/img/icon/num3.svg" alt="">
                     <div class="num__txt">
-                        <p class="num__dest">212</p>
+                        <p class="num__dest">252</p>
                         <p class="num__p">litros de café consumido</p>
                     </div>
                 </div>
             </div>
         </article>
 
+        <!-- PORTFÓLIO -->
         <section id="portfolio" class="port">
             <div class="container">
                 <div class="sec__tit">
@@ -460,6 +467,7 @@
             </div>
         </section>
 
+        <!-- FORMULÁRIO -->
         <article id="formulario" class="cta container">
             <h2>Bora, juntos, profissionalizar seu negócio?</h2>
             <p>Escreva pra gente um email contando sobre seu negócio. Conte com detalhes quais são suas necessidades, objetivos com o site, e tudo mais. Desta forma a gente consegue elaborar um orçamento perfeito para você!</p>
@@ -470,6 +478,7 @@
         </article>
     </main>
 
+    <!-- FOOTER -->
     <footer class="container">
         <div class="footer-logo"><img src="./assets/img/icon/log.svg" alt="Ícone Solary"></div>
         <div class="footer-dados">
@@ -485,14 +494,14 @@
 
 
     <!-- Bib. GSAP -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js" integrity="sha512-GQ5/eIhs41UXpG6fGo4xQBpwSEj9RrBvMuKyE2h/2vw3a9x85T1Bt0JglOUVJJLeyIUl/S/kCdDXlE/n7zCjIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js" integrity="sha512-GQ5/eIhs41UXpG6fGo4xQBpwSEj9RrBvMuKyE2h/2vw3a9x85T1Bt0JglOUVJJLeyIUl/S/kCdDXlE/n7zCjIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Bib. ScrollTrigger -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollTrigger.min.js" integrity="sha512-6BvDODEWgjWWyBrg6YFio6xmzgKWpf54tDlnCtG05m++/jgh/7jQcx6jUJrq44lB84cf68FzYiT0LipabA5g8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollTrigger.min.js" integrity="sha512-6BvDODEWgjWWyBrg6YFio6xmzgKWpf54tDlnCtG05m++/jgh/7jQcx6jUJrq44lB84cf68FzYiT0LipabA5g8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Meus Códigos JS -->
-    <script src="./script.js"></script>
-    <script src="./swiper.js"></script>
+    <script src="assets/js/script.js"></script>
+    <script defer src="assets/js/swiper.js"></script>
 </body>
 
 </html>
