--- a/index.html
+++ b/index.html
@@ -416,16 +416,20 @@
                     <h2>Trabalhos Recentes</h2>
                     <p>Selecionamos alguns projetos que amamos desenvolver. Basta clicar na imagem e ver tooodo o processo, do briefing ao site no ar</p>
                 </div>
+
                 <div class="port-grid">
+                    <!-- ROCCIA -->
                     <div class="port-item1">
-                        <a href="./projetos/pain.html">
-                            <img src="./assets/img/paiN.webp" alt="Projeto paiN Gaming">
+                        <a href="./projetos/roccia">
+                            <img src="./assets/img/bortoluzzi.webp" alt="Projeto Bortoluzzi Advocacia">
                             <div class="port-txt">
-                                <h6>paiN 2015</h6>
-                                <p>Website</p>
+                                <h6>Bortoluzzi Advocacia</h6>
+                                <p>Website & Blog</p>
                             </div>
                         </a>
                     </div>
+
+                    <!-- BORTOLUZZI -->
                     <div class="port-item2">
                         <a href="./projetos/bortoluzzi.html">
                             <img src="./assets/img/bortoluzzi.webp" alt="Projeto Bortoluzzi Advocacia">
@@ -436,6 +440,7 @@
                         </a>
                     </div>
 
+                    <!-- FLAVIO MACIEL -->
                     <div class="port-item3">
                         <a href="./projetos/flavio-maciel.html">
                             <img src="./assets/img/flavioadv.webp" alt="Projeto Flavio Maciel">
@@ -445,15 +450,19 @@
                             </div>
                         </a>
                     </div>
+
+                    <!-- PAIN -->
                     <div class="port-item4">
-                        <a href="./projetos/fluicoffee.html">
-                            <img src="./assets/img/projetos/mockup-fluicoffee1.webp" alt="Projeto Fluicoffee">
+                        <a href="./projetos/pain.html">
+                            <img src="./assets/img/paiN.webp" alt="Projeto paiN Gaming">
                             <div class="port-txt">
-                                <h6>Fluicoffee</h6>
+                                <h6>paiN 2015</h6>
                                 <p>Website</p>
                             </div>
                         </a>
                     </div>
+
+                    <!-- DRESSLER -->
                     <div class="port-item5">
                         <a href="./projetos/dressler.html">
                             <img src="./assets/img/projetos/mockup-dressler3.webp" alt="Projeto Dressler">
@@ -492,14 +501,13 @@
         </div>
     </footer>
 
-
     <!-- Bib. GSAP -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js" integrity="sha512-GQ5/eIhs41UXpG6fGo4xQBpwSEj9RrBvMuKyE2h/2vw3a9x85T1Bt0JglOUVJJLeyIUl/S/kCdDXlE/n7zCjIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Bib. ScrollTrigger -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollTrigger.min.js" integrity="sha512-6BvDODEWgjWWyBrg6YFio6xmzgKWpf54tDlnCtG05m++/jgh/7jQcx6jUJrq44lB84cf68FzYiT0LipabA5g8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <!-- Meus Códigos JS -->
+    <!-- MEUS CÓDIGOS JS -->
     <script src="assets/js/script.js"></script>
     <script defer src="assets/js/swiper.js"></script>
 </body>
