--- a/index.html
+++ b/index.html
@@ -421,21 +421,21 @@
                     <!-- ROCCIA -->
                     <div class="port-item1">
                         <a href="./projetos/roccia">
-                            <img src="./assets/img/bortoluzzi.webp" alt="Projeto Bortoluzzi Advocacia">
+                            <img src="./assets/img/projetos/roccia/roccia.webp" alt="Projeto Roccia Cafés Especiais">
                             <div class="port-txt">
-                                <h6>Bortoluzzi Advocacia</h6>
-                                <p>Website & Blog</p>
+                                <h6>Roccia Cafés Especiais</h6>
+                                <p>Identidade Visual & Packing</p>
                             </div>
                         </a>
                     </div>
 
-                    <!-- BORTOLUZZI -->
+                    <!-- PAIN -->
                     <div class="port-item2">
-                        <a href="./projetos/bortoluzzi.html">
-                            <img src="./assets/img/bortoluzzi.webp" alt="Projeto Bortoluzzi Advocacia">
+                        <a href="./projetos/pain.html">
+                            <img src="./assets/img/paiN.webp" alt="Projeto paiN Gaming">
                             <div class="port-txt">
-                                <h6>Bortoluzzi Advocacia</h6>
-                                <p>Website & Blog</p>
+                                <h6>paiN 2015</h6>
+                                <p>Website</p>
                             </div>
                         </a>
                     </div>
@@ -451,16 +451,18 @@
                         </a>
                     </div>
 
-                    <!-- PAIN -->
+                    <!-- BORTOLUZZI -->
                     <div class="port-item4">
-                        <a href="./projetos/pain.html">
-                            <img src="./assets/img/paiN.webp" alt="Projeto paiN Gaming">
+                        <a href="./projetos/bortoluzzi.html">
+                            <img src="./assets/img/bortoluzzi.webp" alt="Projeto Bortoluzzi Advocacia">
                             <div class="port-txt">
-                                <h6>paiN 2015</h6>
-                                <p>Website</p>
+                                <h6>Bortoluzzi Advocacia</h6>
+                                <p>Website & Blog</p>
                             </div>
                         </a>
                     </div>
+
+
 
                     <!-- DRESSLER -->
                     <div class="port-item5">
