mockups projeto roccia

--- a/index.html
+++ b/index.html
@@ -462,10 +462,19 @@
                         </a>
                     </div>
 
-
+                    <!-- UAI BLEND -->
+                    <div class="port-item5">
+                        <a href="./projetos/dressler.html">
+                            <img src="./assets/img/projetos/mockup-dressler3.webp" alt="Projeto Dressler">
+                            <div class="port-txt">
+                                <h6>Dressler</h6>
+                                <p>Landing Page</p>
+                            </div>
+                        </a>
+                    </div>
 
                     <!-- DRESSLER -->
-                    <div class="port-item5">
+                    <div class="port-item6">
                         <a href="./projetos/dressler.html">
                             <img src="./assets/img/projetos/mockup-dressler3.webp" alt="Projeto Dressler">
                             <div class="port-txt">
