--- a/projetos/roccia.html
+++ b/projetos/roccia.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+  <!-- HEADER -->
   <header class="container">
     <div class="header-bloco">
       <div class="header-left">
@@ -46,7 +47,9 @@
     </div>
   </header>
 
+  <!-- MAIN -->
   <main id="projeto-base">
+    <!-- CAPA -->
     <article class="proj-capa container">
       <div class="proj-tit">
         <h2>Grãos verdadeiramente especiais.</h2>
@@ -61,13 +64,14 @@
           </div>
           <div class="proj-info">
             <span>O que fizemos</span>
-            <p>Identidade Visual, Marca & Website</p>
+            <p>Identidade Visual, Marca & Packing</p>
           </div>
         </div>
       </div>
-      <div class="proj-capa-img"><img src="./../assets/img/projetos/mockup-bortoluzzi1.svg" alt="Mockup do site"></div>
+      <div class="proj-capa-img"><img src="./../assets/img/projetos/roccia/roccia.webp" alt="Mockup do site"></div>
     </article>
 
+    <!-- SOBRE -->
     <div class="bg-proj-about">
       <article class="proj-about container">
         <div class="proj-about-tit">
@@ -77,16 +81,17 @@
             <p>A família Tegon inicialmente nos procurou para desenvolvermos uma Identidade Visual para sua empresa de cafés especiais, porém ao longo do processo percebemos que seria necessário também desenvolver um naming e estabelecer bases mais sólidas para a marca. Fizemos a criação de uma persona para delimitar melhor qual o público que desejavam atingir, bem como o estabelecimento do arquétipo que mais se encaixava com a marca.
               <br><br> Gabriela além de ser apaixonada por advogar também ama escrever, então percebemos a necessidade de um blog, onde fosse possível ela estar sempre atualizando e informando seus clientes. O layout do blog foi inspirado no famoso site de textos, Medium, referência em boa experiência ao usuário quando o assunto é leitura em telas.
             </p>
-            <a class="proj-about-link" href="https://bortoluzziadvocacia.com.br">veja o site completo aqui</a>
+            <a target="_blank" class="proj-about-link" href="https://www.behance.net/gallery/157254439/Roccia-Logo-Coffee-Packaging-Visual-Identity">veja mais detalhes do projeto</a>
           </div>
         </div>
       </article>
     </div>
 
+    <!-- MOCKUPS -->
     <div class="bg-proj-mockup">
       <article class="proj-mockup container">
-        <img src="./../assets/img/bortoluzzi.webp" alt="Mockup de celulares">
-        <img src="./../assets/img/bortoluzzi.webp" alt="Mockup de celulares">
+        <img src="./../assets/img/projetos/roccia/Cafés Especiais.webp" alt="Mockup de celulares">
+        <img src="./../assets/img/projetos/roccia/coffee-cup.webp" alt="Mockup de celulares">
       </article>
     </div>
 
@@ -95,7 +100,7 @@
     </article>
 
     <article class="proj-mockup2 container">
-      <img src="./../assets/img/projetos/mockup-bortoluzzi3.png" alt="Mockup de celulares">
+      <img src="./../assets/img/projetos/roccia/embalagem-roccia.webp" alt="Embalagem da Roccia - Cafés Especiais">
     </article>
 
     <article class="proj-next container">
@@ -107,6 +112,7 @@
     </article>
   </main>
 
+  <!-- FOOTER -->
   <footer class="container">
     <div class="footer-logo"><img src="./../assets/img/icon/log.svg" alt="Ícone Solary"></div>
     <div class="footer-dados">
