melhorias footer projetos

--- a/projetos/dressler.html
+++ b/projetos/dressler.html
@@ -113,9 +113,9 @@
     <div class="footer-dados">
       <a href="mailto:ola@agenciasolary.com.br" class="footer-email">ola@agenciasolary.com.br</a>
       <div class="footer-social">
-        <a href="https://wa.me/53999902079"> <img src="./../assets/img/icon/svgs/soc-zap.svg" alt="Whatsapp da Solary"></a>
-        <a href="https://www.instagram.com/agenciasolary/"> <img src="./../assets/img/icon/svgs/soc-ig.svg" alt="Instagram da Solary"></a>
-        <a href="https://www.behance.net/agenciasolary"> <img src="./../assets/img/icon/svgs/soc-be.svg" alt="Behance da Solary" id="behance"></a>
+        <a target="_blank" href="https://wa.me/53999902079"> <img loading="lazy" src="./../assets/img/icon/svgs/soc-zap.svg" alt="Whatsapp da Solary"></a>
+        <a target="_blank" href="https://www.instagram.com/agenciasolary/"> <img loading="lazy" src="./../assets/img/icon/svgs/soc-ig.svg" alt="Instagram da Solary"></a>
+        <a target="_blank" href="https://www.behance.net/combizera"> <img src="./../assets/img/icon/svgs/soc-be.svg" alt="Behance da Solary" id="behance"></a>
       </div>
       <p class="footer-cnpj">CNPJ: 47.409.055/0001-13</p>
     </div>
