target blank home

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                 <div class="port-grid">
                     <!-- ROCCIA -->
                     <div class="port-item1">
-                        <a href="./projetos/roccia">
+                        <a target="_blank" href="./projetos/roccia">
                             <img src="./assets/img/projetos/roccia/roccia.webp" alt="Projeto Roccia Cafés Especiais">
                             <div class="port-txt">
                                 <h6>Roccia Cafés Especiais</h6>
@@ -431,7 +431,7 @@
 
                     <!-- PAIN -->
                     <div class="port-item2">
-                        <a href="./projetos/pain.html">
+                        <a target="_blank" href="./projetos/pain.html">
                             <img src="./assets/img/paiN.webp" alt="Projeto paiN Gaming">
                             <div class="port-txt">
                                 <h6>paiN 2015</h6>
@@ -442,7 +442,7 @@
 
                     <!-- FLAVIO MACIEL -->
                     <div class="port-item3">
-                        <a href="./projetos/flavio-maciel.html">
+                        <a target="_blank" href="./projetos/flavio-maciel.html">
                             <img src="./assets/img/flavioadv.webp" alt="Projeto Flavio Maciel">
                             <div class="port-txt">
                                 <h6>Escritório Flavio Maciel</h6>
@@ -453,7 +453,7 @@
 
                     <!-- BORTOLUZZI -->
                     <div class="port-item4">
-                        <a href="./projetos/bortoluzzi.html">
+                        <a target="_blank" href="./projetos/bortoluzzi.html">
                             <img src="./assets/img/bortoluzzi.webp" alt="Projeto Bortoluzzi Advocacia">
                             <div class="port-txt">
                                 <h6>Bortoluzzi Advocacia</h6>
@@ -464,7 +464,7 @@
 
                     <!-- UAI BLEND -->
                     <div class="port-item5">
-                        <a href="./projetos/dressler.html">
+                        <a target="_blank" href="./projetos/dressler.html">
                             <img src="./assets/img/projetos/mockup-dressler3.webp" alt="Projeto Dressler">
                             <div class="port-txt">
                                 <h6>Dressler</h6>
@@ -475,7 +475,7 @@
 
                     <!-- DRESSLER -->
                     <div class="port-item6">
-                        <a href="./projetos/dressler.html">
+                        <a target="_blank" href="./projetos/dressler.html">
                             <img src="./assets/img/projetos/mockup-dressler3.webp" alt="Projeto Dressler">
                             <div class="port-txt">
                                 <h6>Dressler</h6>
@@ -491,9 +491,9 @@
         <article id="formulario" class="cta container">
             <h2>Bora, juntos, profissionalizar seu negócio?</h2>
             <p>Escreva pra gente um email contando sobre seu negócio. Conte com detalhes quais são suas necessidades, objetivos com o site, e tudo mais. Desta forma a gente consegue elaborar um orçamento perfeito para você!</p>
-            <a class="cta-email" href="mailto:ola@agenciasolary.com.br">ola@agenciasolary.com.br</a>
+            <a target="_blank" class="cta-email" href="mailto:ola@agenciasolary.com.br">ola@agenciasolary.com.br</a>
             <div id="formulario-cta">
-                <a class="btn__pri borda cta-cta" href="https://forms.gle/vWMG9GMsxZWfwRJ88">prefiro responder um formulário</a>
+                <a target="_blank" class="btn__pri borda cta-cta" href="https://forms.gle/vWMG9GMsxZWfwRJ88">prefiro responder um formulário</a>
             </div>
         </article>
     </main>
@@ -504,9 +504,9 @@
         <div class="footer-dados">
             <a href="mailto:ola@agenciasolary.com.br" class="footer-email">ola@agenciasolary.com.br</a>
             <div class="footer-social">
-                <a href="https://wa.me/5553999902079" target="_blank"> <img src="./assets/img/icon/svgs/soc-zap.svg" alt="Whatsapp da Solary"></a>
-                <a href="https://instagram.com/agenciasolary" target="_blank"> <img src="./assets/img/icon/svgs/soc-ig.svg" alt="Instagram da Solary"></a>
-                <a href="https://www.behance.net/combizera" target="_blank"> <img src="./assets/img/icon/svgs/soc-be.svg" alt="Behance da Solary" id="behance"></a>
+                <a target="_blank" href="https://wa.me/5553999902079"> <img loading="lazy" src="./assets/img/icon/svgs/soc-zap.svg" alt="Whatsapp da Solary"></a>
+                <a target="_blank" href="https://instagram.com/agenciasolary"> <img loading="lazy" src="./assets/img/icon/svgs/soc-ig.svg" alt="Instagram da Solary"></a>
+                <a target="_blank" href="https://www.behance.net/combizera"> <img loading="lazy" src="./assets/img/icon/svgs/soc-be.svg" alt="Behance da Solary" id="behance"></a>
             </div>
             <p class="footer-cnpj">CNPJ: 47.409.055/0001-13</p>
         </div>
